# oscilla

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  compose.yaml  dockerfile.www  frontend-roadmap.md  makefile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: alembic.yaml  black.yaml  docker.yaml  frontend-accessibility.yaml  frontend-check.yaml  frontend-playwright.yaml  frontend-unit.yaml  mypy.yaml  paracelsus.yaml  prettier.yaml  pypi.yaml  pytest.yaml  ruff.yaml  tomlsort.yaml  validate.yaml
content/testlandia/: character_config.yaml  game.yaml
db/: env.py
db/versions/: 10ddc42f084a_normalize_iteration_id_column_type.py  157647760123_drop_character_class_from_character_.py  259483ce21e3_add_adventure_repeat_controls_state.py  4d00544baa8e_add_character_session_output_table.py  4e3a2cc7ad61_add_character_iteration_active_buffs.py  4e401e38a348_remove_current_location_from_character_.py  50db8ddc0649_add_ingame_time_tables.py  54ce9666dd28_add_persistence_schema.py  702eb8ecb200_tick_anchored_state_refactor.py  838f5ad54e6c_add_title_and_pronoun_set_to_characters.py  840b0f8aab05_add_pending_triggers_table.py  8cb42c2142c2_add_auth_audit_log_table.py  97bbf20a2043_remove_hardcoded_progression_columns.py  b39a892757e1_add_title_and_pronoun_set_to_character_.py  c05a68726c2e_add_game_name_field_to_characters_table_.py  c9fe37b6f17d_add_session_token_acquired_at_to_.py  d3057a86660a_replace_float_stat_column_with_.py  d32ff002b8aa_add_game_name_to_characters.py  d4c9cbe28338_add_item_instances_tables_and_update_.py  d536049d79a9_add_auth_refresh_tokens_table.py  d734190494ea_remove_title_from_character_iterations.py  f2efd06c87d8_extend_userrecord_with_web_auth_columns.py  fef7c4caf398_add_skill_system_tables.py
docker/frontend/: Dockerfile
docker/gateway/: Caddyfile
docker/www/: prestart.sh
docs/: README.md  system-overview.md
docs/authors/: README.md  adventures.md  archetypes.md  cli.md  combat-systems.md  conditions.md  content-authoring.md  cooldowns.md  custom-effects.md  effects.md  enemies.md  game-configuration.md  getting-started.md  ingame-time.md  items.md  loot-tables.md  manifest-inheritance.md  passive-effects.md  pronouns.md  quests.md  recipes.md  skills.md  templates.md  world-building.md
docs/dev/: README.md  api.md  authentication.md  cache.md  cli.md  database.md  dependencies.md  design-philosophy.md  docker.md  documentation.md  frontend.md  game-engine.md  github.md  load-warnings.md  makefile.md  pypi.md  settings.md  templates.md  testing.md  tui.md
docs/hosting/: README.md  deployment.md
frontend/: package-lock.json  package.json  playwright.config.ts  playwright.e2e.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.html  test-setup.ts
frontend/tests/: accessibility.test.ts
openspec/: config.yaml
oscilla/: cli.py  cli_content.py  www.py
oscilla/conf/: db.py  settings.py
oscilla/dependencies/: adventure_guard.py  auth.py  games.py
oscilla/engine/: actions.py  calendar_utils.py  character.py  combat_context.py  conditions.py  custom_effect.py  graph.py  graph_renderers.py  ingame_time.py  kinds.py  loader.py  pipeline.py  player.py  quest_engine.py  registry.py  scaffolder.py  schema_export.py  semantic_validator.py  session.py  signals.py  string_utils.py  templates.py  tracer.py  tui.py  web_callbacks.py
oscilla/middleware/: request_logging.py  security_headers.py
oscilla/models/: __init__.py  auth.py  auth_audit_log.py  character.py  character_iteration.py  character_session_output.py  user.py
oscilla/routers/: auth.py  characters.py  games.py  health.py  overworld.py  play.py
oscilla/services/: auth.py  cache.py  character.py  crash.py  db.py  email.py  jinja.py  password_strength.py  rate_limit.py  user.py
tests/: conftest.py  test_cli.py  test_cli_content.py  test_settings.py  test_www.py
tests/conf/: test_db_settings.py
tests/dependencies/: test_adventure_guard.py  test_auth.py
tests/engine/: conftest.py  test_actions_screen.py  test_adventure_outcomes.py  test_adventure_repeat.py  test_adventure_ticks.py  test_calendar_conditions.py  test_calendar_utils.py  test_character.py  test_character_config.py  test_character_creation_defaults.py  test_character_persistence.py  test_character_state.py  test_combat_skills.py  test_combat_system.py  test_conditions.py  test_conditions_ingame_time.py  test_custom_conditions.py  test_custom_effects.py  test_derived_stat_validation.py  test_derived_stats.py  test_effects_quest.py  test_effects_set_location.py  test_game_session.py  test_graph.py  test_graph_renderers.py  test_ingame_time.py  test_ingame_time_integration.py  test_inheritance.py  test_item_enhancements.py  test_load_games.py  test_loader.py  test_loader_condition_shorthand.py  test_loot_ref.py  test_passive_step.py  test_pipeline.py  test_pipeline_persist.py  test_player.py  test_prestige_count_rename.py  test_prestige_effect.py  test_pronoun_system.py  (+22 more)
tests/middleware/: test_cors.py  test_request_logging.py  test_security_headers.py
tests/models/: test_api_characters.py
tests/routers/: test_auth.py  test_auth_audit.py  test_auth_rate_limit.py  test_characters.py  test_games.py  test_health.py  test_overworld.py  test_play.py
tests/services/: test_auth.py  test_cache.py  test_character_service.py  test_character_session.py  test_crash.py  test_db.py  test_email.py  test_jinja.py  test_lockout.py  (+3 more)
tmp/: rename_load.py
(+908 files in other folders)
