[project]
authors = [{"name" = "Robert Hafner"}]
description = ""
dynamic = ["version"]
license = "MIT"
name = "oscilla"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"

dependencies = [
  "SQLAlchemy",
  "aiocache",
  "aiosqlite",
  "alembic",
  "asyncpg",
  "fastapi",
  "jinja2",
  "psycopg2-binary",
  "pydantic~=2.0",
  "pydantic-settings",
  "redis",
  "rich>=14.3.3",
  "ruamel-yaml>=0.19.1",
  "typer",
  "uvicorn[standard]",
]

[project.scripts]
oscilla = "oscilla.cli:app"

[dependency-groups]
dev = [
  "build",
  "dapperdata",
  "glom",
  "greenlet",
  "httpx",
  "mypy",
  "paracelsus",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "tombi",
  "uv",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
omit = [
  "./oscilla/_version.py",
  "./oscilla/__init__.py",
  "./tests/*",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = [".venv", "./oscilla/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
oscilla = ["py.typed", "../content/**/*.yaml", "../content/**/*.yml"]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"

[tool.uv]
exclude-newer = "1 week"
