[project]
name = "oscilla"
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "MIT"
authors = [{ "name" = "Robert Hafner" }]
dynamic = ["version"]

dependencies = [
  "SQLAlchemy",
  "aiocache",
  "aiosmtplib>=5.1.0",
  "aiosqlite",
  "alembic",
  "argon2-cffi>=25.1.0",
  "asyncpg",
  "email-validator>=2.3.0",
  "fastapi",
  "itsdangerous>=2.2.0",
  "jinja2",
  "platformdirs>=4.9.4",
  "psycopg2-binary",
  "pydantic~=2.0",
  "pydantic-settings",
  "pydot>=4,<5",
  "pyjwt>=2.12.1",
  "redis",
  "rich>=14.3.3",
  "ruamel-yaml>=0.19.1",
  "textual>=0.80.0",
  "typer",
  "uvicorn[standard]",
  "zxcvbn>=4.5.0",
]

[project.scripts]
oscilla = "oscilla.cli:app"

[dependency-groups]
dev = [
  "build",
  "glom",
  "greenlet",
  "httpx",
  "mypy",
  "paracelsus",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "tombi",
  "uv",
]

[build-system]
requires = ["setuptools>=82.0.1", "setuptools_scm[toml]>=10.0.5"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
omit = [
  "./oscilla/_version.py",
  "./oscilla/__init__.py",
  "./tests/*",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
exclude = [".venv", "./oscilla/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools.package-data]
oscilla = ["py.typed", "../content/**/*.yaml", "../content/**/*.yml"]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"

[tool.uv]
exclude-newer = "1 week"
